<resources>
    <string name="app_name">JP Media Player</string>
    <string name="all_videos">All Videos</string>
    <string name="videos">Videos</string>
    <string name="all_folders">All Folders</string>
    <string name="total_videos">Total Videos:</string>
    <string name="total_folders">Total Folders:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="themes">Themes</string>
    <string name="cloud">Cloud Storage</string>
    <string name="recycle">Recyclebin</string>
    <string name="sort_order">Sort Order</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="nav_text">Welcome to JP Media Player!!</string>
    <string name="video_name">Video Name</string>
    <string name="music">Music</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>
    <string name="loading">Loading..</string>
    <string name="semi_colon">:</string>
    <string name="lock">Lock Button</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>
    <string name="prev_btn">Previous Button</string>
    <string name="next_btn">Next Button</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="fullscreen_btn">Fullscreen Button</string>
    <string name="play_btn">Play Button</string>
    //for menu
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="search">Search</string>

    <!--strings for video more features-->
    <string name="rename">Rename </string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="orientation">Orientation</string>
    <string name="O">0</string>
    <string name="apply_to_all">Apply To All Upcoming Videos</string>

    <!-- strings for online playing features-->
    <string name="add_link">Paste Link</string>
    <string name="play">Play Video</string>
    <string name="play_online">Play Online</string>
    <string name="youtube">Youtube</string>
    <!--        <string name="app_name">JP Media Player</string>-->
    <string name="shuffle_btn">shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">JP Music Player</string>
    <string name="song_name">Song Name</string>
    <!--        <string name="back_btn">Back</string>-->
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <!--        <string name="repeat_btn">Repeat</string>-->
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <!--        <string name="open">Open</string>-->
    <!--        <string name="close">Close</string>-->
    <string name="app_icon">Icon</string>
    <string name="text_nav">JP Media Player</string>
    <!--        <string name="feedback">Feedback</string>-->
    <string name="settings">Settings</string>
    <!--        <string name="about">About</string>-->
    <!--        <string name="exit">Exit</string>-->
    <!--        <string name="recycle">Recycle Bin</string>-->
    <!--        <string name="cloud">Cloud Storage</string>-->
    <string name="song_album">Song Album</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="topic_feedback">Topic i.e. Suggestion, Error, etc.</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="send">Send</string>
    <string name="set_theme">Setting</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>
    <string name="play_next">Play Next</string>
    <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
    <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites. </string>
    <string name="playlist_note">Tip: Click On ➕ To Create New Playlist. </string>
//Login Signup
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_sign_Up_now">not yet registered? Register Now</string>
    <string name="name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_Login">already have an account? Login Please</string>

</resources>