<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mainLayout"
    tools:context=".cloude.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="25dp"
                    android:text="LOGIN"
                    android:textColor="#3549B8"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/semail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:backgroundTint="#3549B8"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColorHint="#FFFFFF"
                    tools:ignore="VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/spassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:backgroundTint="#3549B8"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColorHint="#FFFFFF"
                    tools:ignore="VisualLintTextFieldSize" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#3549B8"
                    android:text="@string/login"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/isignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingTop="5dp"
                    android:gravity="center"
                    android:text="@string/not_yet_registered_sign_Up_now"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="italic" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="278dp"
        android:layout_height="173dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_video_player_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>