<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cloude.SignupActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="25dp"
                    android:text="@string/sign_up"
                    android:textColor="#3549B8"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/sname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:backgroundTint="#3549B8"
                    android:ems="10"
                    android:hint="@string/name"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/semail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:backgroundTint="#3549B8"
                    android:ems="10"
                    android:hint="@string/email"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    tools:ignore="VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/spassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:backgroundTint="#3549B8"
                    android:ems="10"
                    android:hint="Password"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:ignore="HardcodedText,VisualLintTextFieldSize" />



                <Button
                    android:id="@+id/signup12"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3549B8"
                    android:text="Sign up"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/ilogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/already_have_an_account_Login"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="italic" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="278dp"
        android:layout_height="173dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_video_player_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>